# DV1490_lab2_99

./: CMakeLists.txt  Card.cpp  Card.h  CircularDoubleDirectedList.cpp  CircularDoubleDirectedList.h  Dynamictest.cpp  ICircularDoubleDirectedList.h  IStack.h  LICENSE  NinetyNine.cpp  Player.cpp  Player.h  README.md  Stack.h  TestDeepCopyingOfList.cpp  TestFunctionalityOfList.cpp  myPhails.md
